refactor: vue로 전환

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "cSpell.words": [
-    "Mandatra"
+    "Mandalart"
   ],
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": "active"
