--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.71.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "zod": "^3.22.4"
   }
 }
