--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
